--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -7,3 +7,7 @@
 @import './typography/typography.scss';
 
 @import './theme/theme.scss';
+
+@import './breakPoint/breakPoint.scss';
+
+@import './container/container.scss';
