--- a/frontend/src/shared/components/socialMediaButton/socialMediaButton.scss
+++ b/frontend/src/shared/components/socialMediaButton/socialMediaButton.scss
@@ -1,15 +1,5 @@
 @import '../../../styles/global.scss';
 
-$base : 0px;
-$xsss : 375px;
-$xss : 540px;
-$xs : 640px;
-$sm : 768px;
-$md : 992px;
-$lg : 1024px;
-$xl : 1280px;
-$xll: 1440px;
-
 
 
 .socialMediaButtons
@@ -27,15 +17,6 @@ $xll: 1440px;
         @include flex-centers;
         cursor: pointer;
 
-        @media screen and (max-width: $sm) {
-            width: 30px;
-            height: 30px;
-        }
-
-        @media screen and (max-width: $xs) {
-            width: 38px;
-            height: 38px;
-        }
         
         .icons
         {
@@ -43,12 +24,7 @@ $xll: 1440px;
             color: var(--theme-auth-social-button-text);
             height: 18px;
 
-            @media screen and (max-width: $sm) {
-                width : 15px;
-                height: 15px;
-            }
-
-            @media screen and (max-width: $xs) {
+            @include breakpoint("max-md") {
                 width: 24px;
                 height: 24px;
             }
