--- a/frontend/src/shared/components/userInputConformPassword/userInputConformPassword.scss
+++ b/frontend/src/shared/components/userInputConformPassword/userInputConformPassword.scss
@@ -1,7 +1,7 @@
 @import '../../../styles/global.scss';
 
 
-.loginEmailPart
+.loginConformPasswordPart
 {
     width: 100%;
     padding: 12px 15px;
@@ -15,14 +15,14 @@
         padding: 10px;
     }
     
-    .mailIcon
+    .lockIcon
     {
         display: inline-block;
         width: 24px;
         height: 24px;
     }
 
-    .userEmail
+    .userConformPassword
     {
         outline: none;
         border: none;
