--- a/frontend/src/shared/components/userInputPassword/userInputPassword.scss
+++ b/frontend/src/shared/components/userInputPassword/userInputPassword.scss
@@ -1,14 +1,5 @@
 @import '../../../styles/global.scss';
 
-$base : 0px;
-$xsss : 375px;
-$xss : 540px;
-$xs : 640px;
-$sm : 768px;
-$md : 992px;
-$lg : 1024px;
-$xl : 1280px;
-$xll: 1440px;
 
 
 .loginPasswordPart
@@ -18,29 +9,19 @@ $xll: 1440px;
     border-radius: 30px;
     border: 0.5px solid var(--theme-auth-input-border-gray);
     @include flex-row;
+    align-items: center;
     gap: 20px;
 
-    @media screen and (max-width: $sm) {
+    @include breakpoint ("max-md") {
         padding: 10px;
         gap: 10px;
-    }
-
-    @media screen and (max-width: $xs) {
-        padding: 8px 15px;
     }
     
     .eyeIcon
     {
         display: inline-block;
-
-        @media screen and (max-width: $sm) {
-            width: 15px;
-        }
-
-        @media screen and (max-width: $xs) {
-            width: 24px;
-            height: 24px;
-        }
+        width: 24px;
+        height: 24px;
     }
 
     .userPassword
@@ -55,13 +36,13 @@ $xll: 1440px;
             color: var(--theme-input-placeholder-gray-text);
         }
 
-        @media screen and (max-width: $sm) {
+        @include breakpoint ("max-sm") {
             font-size: 15px;
             line-height: 18px;
         }
 
-        @media screen and (max-width: $xs){
-            font-size: 16px;
+        @include breakpoint ("max-xs"){
+            font-size: 14px;
             line-height: 23.92px;
 
         }
