--- a/frontend/src/auth/login/login.scss
+++ b/frontend/src/auth/login/login.scss
@@ -14,7 +14,6 @@ $xll: 1440px;
     height: 100vh;
     background-color: var(--theme-bg-white);
     position: relative;
-    // overflow-y: hidden;
 
     .vectorTop
     {
@@ -84,10 +83,8 @@ $xll: 1440px;
                 }
 
                 .auth {
-                        width: 100%;
                         height: 100%;
                         object-fit: cover;
-                        // height: calc(100vh - 10px);
 
                         @media screen and (max-width: $lg) 
                         {
@@ -95,13 +92,12 @@ $xll: 1440px;
                         }
 
                         @media screen and (max-width: $md){
-                            // max-height: calc(100vh - 300px);
                             height: calc(100% - 100px);
                         }
 
-                        // @media screen and (max-width: $sm){
-                        //     height: calc(100vh - 120px); 
-                        // }
+                        @media screen and (max-width: $sm){
+                            height: calc(100vh - 120px); 
+                        }
                         
                         @media screen and (max-width: $xs) {
                             display: none;
@@ -109,7 +105,7 @@ $xll: 1440px;
                     }
                     .auth-login
                     {
-                        max-height:170px;
+                        max-height:150px;
                         display: none;
 
                         @media screen and (max-width: $xs) {
@@ -182,7 +178,6 @@ $xll: 1440px;
 
                         .headingDescription {
                             @include font-kanit-auth-subHeading-bold-400;
-                            // font-size: 14px;
                             color: var(--theme-auth-subHeading-text);
 
                             @media screen and (max-width : $xs) {
