--- a/frontend/src/auth/resetPassword/resetPassword.scss
+++ b/frontend/src/auth/resetPassword/resetPassword.scss
@@ -1,1 +1,166 @@
 @import '../../styles/global.scss';
+
+
+.mainResetPassword {
+    height: 100vh;
+    background-color: var(--theme-bg-white);
+    position: relative;
+    overflow-y: hidden;
+
+    .vectorTop
+    {
+        position: absolute;
+        top: -60px;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-image: url('../../assets/images/auth-vector-top.png');
+        background-position: top left;
+        background-repeat: no-repeat;
+        display: none;
+
+        @include breakpoint ("max-md") {
+            display: block;
+        }
+    }
+
+    .vectorBottom
+    {
+        position: absolute;
+        bottom: -10px;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-image: url('../../assets/images/auth-vector-bottom.png');
+        background-position: bottom right;
+        background-repeat: no-repeat;
+        display: none;
+
+        @include breakpoint ("max-md") {
+            display: block;
+        }
+
+        @include breakpoint ("max-sm") {
+            bottom: -30px;
+        }
+    }
+
+    .container {
+        height: 100%;
+
+        .innerResetPassword {
+            @include grid2-centers;
+            height: 100%;
+            position: relative;
+            z-index: 999;
+
+            @include breakpoint ("max-md") {
+                grid-template-columns: 1fr;
+            }
+
+            .imagePart {
+                @include flex-centers;
+                width: 100%;
+                height: 100vh;
+
+                @include breakpoint ("max-md") {
+                    padding: 0;
+                    height: 100%;
+                    align-items: end;
+                }
+
+                .auth {
+                        height: 100%;
+                        object-fit: cover;
+
+                        @include breakpoint ("max-md"){
+                            display: none;
+                        }
+                    }
+                    .auth-resetPassword
+                    {
+                        height:150px;
+                        display: none;
+
+                        @include breakpoint ("max-md") {
+                            display: block;
+                        }
+                    }
+            }
+
+            .resetPasswordPart {
+                @include flex-centers;
+                width: 100%;
+
+                .verificationForm {
+                    width: 100%;
+                    @include flex-col;
+                    max-width: 387px;
+                    height: auto;
+                    padding: 0 5px;
+                    gap: 15px;
+
+                    @include breakpoint ("max-md") {
+                        max-width: 80%;
+                        gap: 10px;
+                    }
+                    
+                    .resetPasswordHeadingPart {
+                        padding: 2px 0;
+
+                        @include breakpoint ("max-md") {
+                            padding: 0;
+                        }
+
+                        .resetPasswordHeading {
+                            @include font-karma-auth-heading-bold-700;
+                            color: var(--theme-auth-heading-text);
+                            text-align: left;
+                            width: 100%;
+                            padding: 10px 0;
+
+                            @include breakpoint ("max-md") {
+                                @include font-kaisei-harunoUmi-bold-700;
+                                font-size: 20px;
+                                line-height: 20px;
+                            }
+                        }
+                        .resetPasswordHeadingDescription
+                        {
+                            @include font-karma-auth-subHeading-bold-400;
+                            color: var( --theme-auth-subHeading-text);
+
+                         
+                          
+                        }
+                    }
+
+                    .resetPasswordUserPassword
+                    {
+                        .resetPasswoedUserEmailHeading
+                        {
+                            @include font-roboto-400;
+                            font-size: 20px;
+                            line-height: 23.44px;
+                            color: var(--theme-auth-user-input-heading-dark-gray-text);
+                            padding: 8px 0;
+
+                            @include breakpoint ("max-sm")
+                            {
+                                font-size: 16px;
+                            }
+                        }
+                    }
+
+                    .resetPasswordBorderVector
+                    {
+                        height: 0.52px;
+                        max-width: 100px;
+                        background-color: var(--theme-auth-border-vector-bg-gray);
+                    }
+                    
+                }
+            }
+        }
+    }
+}
