--- a/frontend/src/styles/theme/theme.scss
+++ b/frontend/src/styles/theme/theme.scss
@@ -4,6 +4,7 @@
     --theme-bg-white : #fff;
     --theme-auth-button-bg-moderate : #528FAD;
     --theme-auth-vector-bg-light-gray : #D4D3D3;
+    --theme-auth-border-vector-bg-gray : #9E9E9E;
 
 
     --theme-input-placeholder-gray-text :#A0A0A0;
@@ -18,6 +19,7 @@
     --theme-auth-account-options-black-text : #000000;
     --theme-auth-account-options-link-moderate-text : #528FAD;
     --theme-auth-account-options-link-white-text : #FFFFFF;
+    --theme-auth-user-input-heading-dark-gray-text : #636363;
 
 
 
