--- a/frontend/src/auth/login/login.scss
+++ b/frontend/src/auth/login/login.scss
@@ -1,19 +1,11 @@
 @import '../../styles/global.scss';
 
-$base : 0px;
-$xsss : 375px;
-$xss : 540px;
-$xs : 640px;
-$sm : 768px;
-$md : 992px;
-$lg : 1024px;
-$xl : 1280px;
-$xll: 1440px;
 
 .mainLogin {
     height: 100vh;
     background-color: var(--theme-bg-white);
     position: relative;
+    overflow-y: hidden;
 
     .vectorTop
     {
@@ -27,7 +19,7 @@ $xll: 1440px;
         background-repeat: no-repeat;
         display: none;
 
-        @media screen and (max-width: $xs) {
+        @include breakpoint ("max-md") {
             display: block;
         }
     }
@@ -44,8 +36,12 @@ $xll: 1440px;
         background-repeat: no-repeat;
         display: none;
 
-        @media screen and (max-width: $xs) {
+        @include breakpoint ("max-md") {
             display: block;
+        }
+
+        @include breakpoint ("max-sm") {
+            bottom: -30px;
         }
     }
 
@@ -58,17 +54,8 @@ $xll: 1440px;
             position: relative;
             z-index: 999;
 
-            @media screen and (max--width : $lg) {
-                gap: 20px;
-            }
-
-            @media screen and (max-width : $md) {
-                gap: 10px;
-            }
-
-            @media screen and (max-width : $xs ){
+            @include breakpoint ("max-md") {
                 grid-template-columns: 1fr;
-                gap: 2px;
             }
 
             .imagePart {
@@ -76,7 +63,7 @@ $xll: 1440px;
                 width: 100%;
                 height: 100vh;
 
-                @media screen and (max-width : $xs) {
+                @include breakpoint ("max-md") {
                     padding: 0;
                     height: 100%;
                     align-items: end;
@@ -86,20 +73,7 @@ $xll: 1440px;
                         height: 100%;
                         object-fit: cover;
 
-                        @media screen and (max-width: $lg) 
-                        {
-                            height: calc(100% - 50px);
-                        }
-
-                        @media screen and (max-width: $md){
-                            height: calc(100% - 100px);
-                        }
-
-                        @media screen and (max-width: $sm){
-                            height: calc(100vh - 120px); 
-                        }
-                        
-                        @media screen and (max-width: $xs) {
+                        @include breakpoint ("max-md"){
                             display: none;
                         }
                     }
@@ -108,7 +82,7 @@ $xll: 1440px;
                         max-height:150px;
                         display: none;
 
-                        @media screen and (max-width: $xs) {
+                        @include breakpoint ("max-md") {
                             display: block;
                         }
                     }
@@ -126,29 +100,15 @@ $xll: 1440px;
                     padding: 0 5px;
                     gap: 15px;
 
-                    @media screen and (max-width: $lg) {
-                        max-width: 320px;
-                    }
-
-                    @media screen and (max-width: $md) {
-                        max-width: 300px;
-                    }
-                    
-                    @media screen and (max-width : $sm) {
-                        max-width: 280px;
+                    @include breakpoint ("max-md") {
+                        max-width: 80%;
                         gap: 10px;
                     }
-
                     
-                    @media screen and (max-width : $xs) {
-                        max-width: 80%;
-                        gap: 8px;
-                    }
-
                     .loginHeadingPart {
                         padding: 2px 0;
 
-                        @media screen and (max-width: $md) {
+                        @include breakpoint ("max-md") {
                             padding: 0;
                         }
 
@@ -157,34 +117,18 @@ $xll: 1440px;
                             color: var(--theme-auth-heading-text);
                             text-align: left;
                             width: 100%;
+                            padding: 10px 0;
 
-                            @media screen and (max-width : $md) {
-                                font-size: 32px;
-                                line-height: 36px;
-                            }
-
-                            @media screen and (max-width : $sm) {
-                                font-size: 28px;
-                                line-height: 32px;
-                            }
-
-                            @media screen and (max-width : $xs) {
+                            @include breakpoint ("max-md") {
                                 @include font-kaisei-harunoUmi-bold-700;
                                 font-size: 20px;
-                                line-height: 36px;
+                                line-height: 20px;
                             }
-
                         }
-
-                        .headingDescription {
+                        .headingDescription
+                        {
                             @include font-kanit-auth-subHeading-bold-400;
-                            color: var(--theme-auth-subHeading-text);
-
-                            @media screen and (max-width : $xs) {
-                                @include font-kanit-bold-400;
-                                line-height: 12px;
-                                font-size: 12px;
-                            }
+                            color: var( --theme-auth-subHeading-text);
                         }
                     }
 
@@ -196,7 +140,7 @@ $xll: 1440px;
                             .forgot {
                                 color: var(--theme-auth-options-gray-text);
 
-                                @media screen and (max-width : $xs) {
+                                @include breakpoint ("max-xs") {
                                     color: var(--theme-auth-options-dark-gray-text);
                                 }
                             }
@@ -205,11 +149,7 @@ $xll: 1440px;
 
                     .signInWithPart {
                         @include flex-centers;
-                        padding: 10px 0;
-
-                        @media screen and (max-width: $sm) {
-                            padding: 5px;
-                        }
+                        padding: 5px 0;
 
                         .vector {
                             height: 2px;
@@ -227,18 +167,15 @@ $xll: 1440px;
                                 text-align: center;
                                 @include font-roboto-400;
 
-                                @media screen and (max-width : $sm) {
+                                @include breakpoint ("max-md") {
                                     font-size: 12px;
-                                }
-
-                                @media screen and (max-width : $xs) {
                                     @include font-kanit-auth-subHeading-bold-400;
                                     line-height: 23.92px;
                                 }
                             }
                         }
                     }
-                    .signInOptionPart
+                    .loginSocialMediaPart
                     {
                         @include flex-centers;
                         padding: 2px 0;
@@ -254,11 +191,7 @@ $xll: 1440px;
                             @include font-kanit-bold-400;
                             color: var( --theme-auth-account-options-gray-text);
 
-                            @media screen and (max-width: $sm) {
-                                font-size: 15px;
-                            }
-
-                            @media screen and (max-width: $xs) {
+                            @include breakpoint ("max-md") {
                                 color: var(--theme-auth-account-options-black-text);
                             }
 
@@ -266,9 +199,14 @@ $xll: 1440px;
                             {
                                 color: var( --theme-auth-account-options-link-moderate-text);
 
-                                @media screen and (max-width : $xs) {
+                                @include breakpoint ("max-md") {
                                     color: var(--theme-auth-account-options-link-white-text);
                                 }
+
+                                @media screen and (min-width : 920px) {
+                                    color: var( --theme-auth-account-options-link-moderate-text);
+                                }
+
                             }
                         }
                     }
