--- a/frontend/src/auth/signup/signup.scss
+++ b/frontend/src/auth/signup/signup.scss
@@ -1,7 +1,7 @@
 @import '../../styles/global.scss';
 
 
-.mainLogin {
+.mainSignUp {
     height: 100vh;
     background-color: var(--theme-bg-white);
     position: relative;
@@ -48,7 +48,7 @@
     .container {
         height: 100%;
 
-        .innerLogin {
+        .innerSignUp {
             @include grid2-centers;
             height: 100%;
             position: relative;
@@ -77,8 +77,7 @@
                             display: none;
                         }
                     }
-                    .auth-login
-                    {
+                .auth-signUp{
                         max-height:150px;
                         display: none;
 
@@ -88,11 +87,11 @@
                     }
             }
 
-            .loginPart {
+            .signUpPart {
                 @include flex-centers;
                 width: 100%;
 
-                .loginForm {
+                .signUpForm {
                     width: 100%;
                     @include flex-col;
                     max-width: 387px;
@@ -105,14 +104,14 @@
                         gap: 10px;
                     }
                     
-                    .loginHeadingPart {
+                    .signUpHeadingPart {
                         padding: 2px 0;
 
                         @include breakpoint ("max-md") {
                             padding: 0;
                         }
 
-                        .loginHeading {
+                        .signUpHeading {
                             @include font-karma-auth-heading-bold-700;
                             color: var(--theme-auth-heading-text);
                             text-align: left;
@@ -123,32 +122,6 @@
                                 @include font-kaisei-harunoUmi-bold-700;
                                 font-size: 20px;
                                 line-height: 20px;
-                            }
-
-                            // @include breakpoint ("max-sm") {
-                            //     font-size: 28px;
-                            //     line-height: 32px;
-                            // }
-
-                            // @include breakpoint ("max-xs") {
-                            //     font-size: 20px; 
-                            //     line-height: 36px;
-                            // }
-
-                        }
-                    }
-
-                    .forgotPasswordPart {
-                        .forgotPassword {
-                            @include font-kanit-bold-400;
-                            text-align: right;
-
-                            .forgot {
-                                color: var(--theme-auth-options-gray-text);
-
-                                @include breakpoint ("max-xs") {
-                                    color: var(--theme-auth-options-dark-gray-text);
-                                }
                             }
                         }
                     }
@@ -161,14 +134,13 @@
                             height: 2px;
                             width: 100%;
                             background-color: var(--theme-auth-vector-bg-light-gray);
-
                         }
 
                         .otherOption {
                             width: 100%;
                             padding: 2px;
 
-                            .signInOption {
+                            .signUpOption {
                                 color: var(--theme-auth-other-options-text);
                                 text-align: center;
                                 @include font-roboto-400;
@@ -181,7 +153,7 @@
                             }
                         }
                     }
-                    .signInOptionPart
+                    .signUpSocialMediaPart
                     {
                         @include flex-centers;
                         padding: 2px 0;
@@ -189,9 +161,9 @@
                         margin: 0 auto;
                         gap: 5px;
                     }
-                    .signupOptionPart
+                    .accountOptionPart
                     {
-                        .signupDescription
+                        .accountDescription
                         {
                             text-align: center;
                             @include font-kanit-bold-400;
@@ -201,7 +173,7 @@
                                 color: var(--theme-auth-account-options-black-text);
                             }
 
-                            .signupLink
+                            .signUpLink
                             {
                                 color: var( --theme-auth-account-options-link-moderate-text);
 
