--- a/frontend/src/shared/components/userInputConformPassword/userInputConformPassword.scss
+++ b/frontend/src/shared/components/userInputConformPassword/userInputConformPassword.scss
@@ -29,6 +29,7 @@
         @include font-kanit-bold-400;
         width: 100%;
         padding: 0 2px;
+        background-color: transparent;
 
         &::placeholder
         {
