--- a/frontend/src/shared/components/userInputPassword/userInputPassword.scss
+++ b/frontend/src/shared/components/userInputPassword/userInputPassword.scss
@@ -30,6 +30,7 @@
         border: none;
         @include font-kanit-bold-400;
         width: 100%;
+        background-color: transparent;
 
         &::placeholder
         {
