--- a/frontend/src/shared/components/moderateOutlineButton/moderateOutlineButton.scss
+++ b/frontend/src/shared/components/moderateOutlineButton/moderateOutlineButton.scss
@@ -1,26 +1,26 @@
 @import '../../../styles/global.scss';
 
 
-.moderateButtonMain
+.moderateOutlineButtonMain
 {
     width: 100%;
     
-    .moderateBtn {
+    .moderateOutlineBtn {
         width: 100%;
-        background-color: var(--theme-auth-button-bg-moderate);
+        background-color : var( --theme-bg-transparent);
         border-radius: 30px;
         outline: none;
-        border: none;
-        color: var(--theme-auth-moderate-button-text);
+        border: 0.5px solid var(--theme-moderate-outline-button-border-moderate);
+        color: var(--theme-moderate-outline-button-text);
         padding: 12px 15px;
         text-align: center;
-        @include font-kaisei-harunoUmi-bold-700;
+        @include font-kanit-auth-subHeading-bold-400;
         cursor: pointer;
-        font-size: 18px; 
 
         
     @include breakpoint ("max-md") {
         padding: 10px;
+        font-size: 18px; 
         font-weight: 500;
         line-height: 26.06px;
     }
