--- a/frontend/src/styles/mixin/mixin.scss
+++ b/frontend/src/styles/mixin/mixin.scss
@@ -14,6 +14,13 @@
     justify-content: center;
 }
 
+@mixin flex-col-centers{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
 @mixin grid2-centers {
     display: grid;
     align-items: center;
