change signup page and redux state variable and function --gautam

--- a/frontend/src/auth/login/login.scss
+++ b/frontend/src/auth/login/login.scss
@@ -101,6 +101,11 @@
             gap: 10px;
           }
 
+          @include breakpoint("max-xxs") {
+            max-width: 85%;
+            gap: 8px;
+          }
+
           .loginHeadingPart {
             padding: 2px 0;
 
@@ -189,13 +194,13 @@
               .signupLink {
                 color: var(--theme-auth-account-options-link-moderate-text);
 
-                @include breakpoint("max-md") {
+                @include breakpoint("max-xs") {
                   color: var(--theme-auth-account-options-link-white-text);
                 }
 
-                @media screen and (min-width: 920px) {
-                  color: var(--theme-auth-account-options-link-moderate-text);
-                }
+                // @media screen and (min-width: 920px) {
+                //   color: var(--theme-auth-account-options-link-moderate-text);
+                // }
               }
             }
           }
