--- a/frontend/src/styles/theme/theme.scss
+++ b/frontend/src/styles/theme/theme.scss
@@ -4,6 +4,8 @@
     --theme-bg-white : #fff;
     --theme-bg-transparent : transparent;
     --theme-bg-moderate : #528FAD;
+    --theme-auth-verification-button-bg-light-gray : #DFDFDF80;
+
     --theme-auth-button-bg-moderate : #528FAD;
     --theme-auth-vector-bg-light-gray : #D4D3D3;
     --theme-auth-border-vector-bg-gray : #9E9E9E;
