--- a/frontend/src/auth/verificationCode/verificationCode.scss
+++ b/frontend/src/auth/verificationCode/verificationCode.scss
@@ -102,8 +102,12 @@
                     gap: 15px;
 
                     @include breakpoint ("max-md") {
-                        max-width: 80%;
+                        max-width: 55%;
                         gap: 10px;
+                    }
+
+                    @include breakpoint ("max-xs") {
+                        max-width: 70%;
                     }
                     
                     .verificationCodeHeadingPart {
